added a footer, changed the parent element

--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
     <title>Document</title>
   </head>
   <body>
-    <div>
-      <div>
-        <h1>
-          Created by <a href="http://tno.dev">Mohammed Sobhi</a> with Vanilla JS
-        </h1>
-        <p>
-          based on a tutorial by
-          <a href="https://youtu.be/rTVoyWu8r6g">Chris Courses</a>
-        </p>
-      </div>
+    <header>
+      <h1>
+        Created by <a href="http://tno.dev">Mohammed Sobhi</a> with Vanilla JS
+      </h1>
+      <p>
+        based on a tutorial by
+        <a href="https://youtu.be/rTVoyWu8r6g">Chris Courses</a>
+      </p>
+    </header>
+
+    <main>
       <div id="boxes">
         <span>
           <input type="checkbox" id="hitbox" name="hitbox" value="hitbox" />
@@ -38,7 +39,14 @@
         </span>
       </div>
       <canvas></canvas>
-    </div>
+    </main>
+
+    <footer>
+      Hero art by
+      <a href="https://luizmelo.itch.io/medieval-king-pack-2">LuizMelo</a>
+      Background art by
+      <a href="https://trixelized.itch.io/starstring-fields">Trixie</a>
+    </footer>
   </body>
   <script src="./js/utils.js"></script>
   <script src="./js/classes/CollisionBlock.js"></script>
